# FDTD_Method

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  Report_FDTD.docx
.github/workflows/: main.yml
PlotScript/: OutFile.csv  Reserve.txt  Source.txt  convergence.py  legacy.py  main.py  visualization.py
PlotScript/OutFiles_1/: 0.csv  200.csv
PlotScript/OutFiles_2/: 0.csv  1.csv  200.csv
PlotScript/OutFiles_3/: 10.csv  11.csv  12.csv  2.csv  200.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
PlotScript/OutFiles_4/: 0.csv  1.csv  10.csv  11.csv  12.csv  2.csv  200.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
PlotScript/OutFiles_5/: 0.csv  1.csv  10.csv  11.csv  12.csv  2.csv  200.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
PlotScript/OutFiles_6/: 0.csv  1.csv  200.csv  4.csv
PlotScript/src/: FDTD.lib
coarray/: fdtd.F90  fdtd.f90.txt  fdtd_coarray.f90
gtest/: CMakeLists.txt
include/: CMakeLists.txt  Current.h  FDTD.h  FDTD_boundaries.h  Structures.h  Writer.h  test_FDTD.h
include/FDTD/: Current.h  FDTD.h  FDTD_PML.h  Field.h  Writer.h  functors.h  shared.h  test_FDTD.h
include/FDTD_kokkos/: FDTD_PML_kokkos.h  FDTD_kokkos.h  Functors.h  kokkos_FDTD_boundary.h  kokkos_functors.h  kokkos_shared.h  test_FDTD_kokkos.h
perf-tests/: CMakeLists.txt  README_vectorization.md  vectorization_compare.cpp
perf-tests/kokkos_sample/: kokkos_sample.cpp
perf-tests/sample/: CMakeLists.txt  sample.cpp
project/: CMakeLists.txt
project/FDTD/: CMakeLists.txt  CmakeLists.txt
project/FDTD_kokkos/: CMakeLists.txt
python_script_legend/: visualization.py
samples/: CMakeLists.txt  sample.cpp
samples/kokkos_sample/: CMakeLists.txt  kokkos_sample.cpp
samples/sample/: CMakeLists.txt  sample.cpp
sln/: CMakeLists.txt  FDTD.sln
sln/FDTD/: CMakeLists.txt  FDTD.sln  FDTD.vcxproj  FDTD.vcxproj.filters  cmake_install.cmake
sln/FDTD/FDTD/: FDTD.vcxproj  FDTD.vcxproj.filters
sln/FDTD/gtest/: gtest.vcxproj
sln/FDTD/sample/: sample.vcxproj
sln/FDTD/tests/: tests.vcxproj  tests.vcxproj.filters
sln/FDTD_test/: CMakeLists.txt  FDTD_test.vcxproj  FDTD_test.vcxproj.filters  cmake_install.cmake
sln/gtest/: CMakeLists.txt  cmake_install.cmake  gtest.vcxproj  gtest.vcxproj.filters
sln/sample/: CMakeLists.txt  cmake_install.cmake  sample.vcxproj  sample.vcxproj.filters
sln/sample/sample.dir/Release/: sample.exe.recipe
sln/sample/sample.dir/Release/sample.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sample.lastbuildstate
sln/samples/: sample.vcxproj  sample.vcxproj.filters
sln/test_FDTD_method/: CMakeLists.txt  CmakeLists.txt
sln/tests/: FDTD_test.vcxproj  FDTD_test.vcxproj.filters
src/: Current.cpp  FDTD.cpp  FDTD_boundaries.cpp  Source.txt  Structures.h  Writer.cpp  test_FDTD.cpp
src/FDTD/: Current.cpp  FDTD.cpp  FDTD.h  FDTD_PML.cpp  FDTD_PML.h  Field.cpp  Writer.cpp  shared.h  test_FDTD.cpp  test_FDTD.h
src/FDTD_kokkos/: FDTD_PML_kokkos.cpp  FDTD_PML_kokkos.h  FDTD_kokkos.cpp  FDTD_kokkos.h  kokkos_FDTD_boundary.cpp  kokkos_functors.h  kokkos_shared.h  test_FDTD_kokkos.cpp  test_FDTD_kokkos.h
test/: CMakeLists.txt  test_FDTD_method.cpp  test_FDTD_method_kokkos.cpp  test_main.cpp
unit-tests/: CMakeLists.txt
